# deeplptm_package

./: LICENSE  README.md  pyproject.toml
Simulations/bbc/ScenarioA/: texts.csv
Simulations/bbc/ScenarioC/: texts.csv
Simulations/bbc/scenarioB/: texts.csv
docs/: Tutorial_deep-LPTM.md
src/DeepLPTM/: Simulations.py  Tutorial_deep-LPTM.ipynb  args.py  functions.py  main.py  model.py
src/DeepLPTM/ETM_raw/: etm.py  main.py  utils.py
src/DeepLPTM/deepLPM_main/: input_data.py  model.py  train.py
