[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DeepLPTM"
version = "0.0.1"
authors = [
  { name="anonymous"},
]
description = "Implementation of the deep latent positions and topics model (Deep-LPTM)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/DeepLPTM/"]